--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -648,6 +648,105 @@ a {
   background-color: var(--candlelight-color);
 }
 
+.loader,
+.loader::before,
+.loader::after {
+  width: 1em;
+  height: 4em;
+  background: var(--gray-color);
+  -webkit-animation: load 1s infinite ease-in-out;
+  animation: load 1s infinite ease-in-out;
+}
+
+.loader {
+  position: relative;
+  margin: 88px auto;
+  font-size: 11px;
+  text-indent: -9999em;
+  color: var(--gray-color);
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-top: 150px;
+}
+.loader__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 130px;
+}
+.loader__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 18px;
+}
+
+.loader::before,
+.loader::after {
+  content: "";
+  position: absolute;
+  top: 0;
+}
+
+.loader::before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.loader::after {
+  left: 1.5em;
+}
+
+@keyframes load {
+  0%, 80%, 100% {
+    height: 4em;
+    -webkit-box-shadow: 0 0;
+    box-shadow: 0 0;
+  }
+  40% {
+    height: 5em;
+    -webkit-box-shadow: 0 -2em;
+    box-shadow: 0 -2em;
+  }
+}
+/* stylelint-disable-next-line at-rule-no-vendor-prefix */
+@-webkit-keyframes load {
+  0%, 80%, 100% {
+    height: 4em;
+    -webkit-box-shadow: 0 0;
+    box-shadow: 0 0;
+  }
+  40% {
+    height: 5em;
+    -webkit-box-shadow: 0 -2em;
+    box-shadow: 0 -2em;
+  }
+}
 /* stylelint-disable order/order */
 .home-container {
   display: -webkit-box;
