--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -852,18 +852,20 @@ a {
 
 .home-img {
   position: relative;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: start;
   -ms-flex-align: start;
-  align-items: flex-start;
+  align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   border-radius: 5px;
   width: 100%;
   height: 100%;
+  max-height: 380px;
 }
 .home-img img {
   display: block;
@@ -2397,7 +2399,7 @@ a {
   display: flex;
   -webkit-box-align: start;
   -ms-flex-align: start;
-  align-items: flex-start;
+  align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
@@ -2431,7 +2433,7 @@ a {
     overflow: hidden;
     width: 100%;
     height: 100%;
-    max-width: 450px;
+    max-width: 400px;
   }
 }
 @media (max-width: 576px) {
