--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -970,6 +970,11 @@ a {
     -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
+
+  .home-content__top-right {
+    display: flex;
+    align-items: center;
+  }
 }
 .home-content__top--no-logo {
   gap: 0;
@@ -984,10 +989,16 @@ a {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding: 5px 10px;
+  max-width: fit-content;
   -webkit-box-shadow: var(--shadow-logo);
   box-shadow: var(--shadow-logo);
 }
+.home-content__logo img {
+  border-radius: 4px;
+  max-width: max-content;
+  max-height: 40px;
+}
+
 .home-content__logo--bg-none {
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -1206,6 +1217,11 @@ a {
   -ms-flex-direction: column;
   flex-direction: column;
   gap: 10px;
+  width: 100%;
+}
+.home-bottom__item {
+  display: flex;
+  width: 100%;
 }
 @media (max-width: 1024px) {
   .home-bottom__item {
@@ -1235,7 +1251,7 @@ a {
     left: 0;
     bottom: 0;
     padding: 10px;
-    width: 100%;
+    width: -webkit-fill-available;
   }
   .home-bottom .btn {
     width: 100%;
@@ -1332,7 +1348,7 @@ a {
   justify-content: center;
   -ms-grid-column-span: 6;
   grid-column: 6 span;
-  padding-top: 70px;
+  padding-top: 30px;
   background-color: var(--dark-color);
 }
 .home-classic .home__left .home__img {
@@ -1355,9 +1371,9 @@ a {
 .home-classic .home__left::after {
   content: "";
   position: absolute;
-  bottom: -81px;
+  bottom: -41px;
   width: 100%;
-  height: 90px;
+  height: 59px;
   background-color: inherit;
 }
 @media (max-width: 1024px) {
@@ -1472,10 +1488,10 @@ a {
   .home-classic .home__right {
     -ms-grid-column-span: 8;
     grid-column: 8 span;
-    padding: 0 10px;
+    padding: 10px;
     padding-top: 0;
     padding-bottom: 0;
-    width: 100%;
+    width: -webkit-fill-available;
     max-width: 768px;
     gap: 35px;
   }
@@ -1788,6 +1804,9 @@ a {
   align-items: flex-end;
   gap: 10px;
 }
+.home-classic .home-bottom__item {
+  display: flex;
+}
 @media (max-width: 1024px) {
   .home-classic .home-bottom__item {
     width: 100%;
@@ -1822,7 +1841,7 @@ a {
     left: 0;
     bottom: 0;
     padding: 10px;
-    width: 100%;
+    width: -webkit-fill-available;
   }
   .home-classic .home-bottom .btn {
     width: 100%;
@@ -1991,7 +2010,7 @@ a {
     grid-column: 8 span;
     padding-top: 0;
     padding-bottom: 0;
-    width: 100%;
+    width: -webkit-fill-available;
     max-width: 768px;
     gap: 35px;
   }
@@ -2051,9 +2070,12 @@ a {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding: 5px 10px;
+  padding: 0;
   -webkit-box-shadow: var(--shadow-logo);
   box-shadow: var(--shadow-logo);
+}
+.home-strict .home-content__logo img {
+  border-radius: 0;
 }
 .home-strict .home-content__logo--none {
   display: none;
@@ -2067,7 +2089,7 @@ a {
   -ms-flex-direction: column;
   flex-direction: column;
   padding: 20px;
-  width: 100%;
+  width: initial;
   -webkit-box-shadow: var(--shadow-light);
   box-shadow: var(--shadow-light);
   background-color: var(--light-color);
@@ -2144,7 +2166,7 @@ a {
   flex-wrap: wrap;
   border-top: none;
   padding: 20px;
-  width: 100%;
+  width: -webkit-fill-available;
   -webkit-box-shadow: var(--shadow-light);
   box-shadow: var(--shadow-light);
   row-gap: 10px;
@@ -2281,7 +2303,7 @@ a {
     left: 0;
     bottom: 0;
     padding: 10px;
-    width: 100%;
+    width: -webkit-fill-available;
   }
   .home-strict .home-bottom .btn {
     width: 100%;
@@ -2718,7 +2740,7 @@ a {
     left: 0;
     bottom: 0;
     padding: 10px;
-    width: 100%;
+    width: -webkit-fill-available;
   }
   .home-medicine .home-bottom .btn {
     width: 100%;
@@ -2927,7 +2949,7 @@ a {
 @media (max-width: 576px) {
   .home-flup .home-content__logo {
     border-radius: 48px;
-    background-color: var(--dove-gray-color);
+    background-color: inherit;
   }
 }
 .home-flup .home-content__logo--none {
@@ -3062,7 +3084,7 @@ a {
     left: 0;
     bottom: 0;
     padding: 10px;
-    width: 100%;
+    width: -webkit-fill-available;
   }
   .home-flup .home-bottom .btn {
     width: 100%;
@@ -3240,12 +3262,13 @@ a {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  -ms-grid-column-span: 7;
-  grid-column: 7 span;
+  -ms-grid-column-span: 6;
+  grid-column: 6 span;
   padding: 20px;
   padding-top: 40px;
   padding-bottom: 30px;
   gap: 20px;
+  width: fit-content;
 }
 @media (max-width: 1024px) {
   .home-yellow-blue .home__right {
@@ -3544,7 +3567,7 @@ a {
     left: 0;
     bottom: 0;
     padding: 10px;
-    width: 100%;
+    width: -webkit-fill-available;
   }
   .home-yellow-blue .home-bottom .btn {
     width: 100%;
@@ -4504,6 +4527,7 @@ a {
     grid-column: 4 span;
     width: 100%;
     max-width: 425px;
+    border-radius: 30px;
   }
 }
 .portfolio-yellow-blue .portfolio-item__img img {
@@ -6167,7 +6191,7 @@ a {
     grid-column: 8 span;
     padding-top: 0;
     padding-bottom: 0;
-    width: 100%;
+    width: -webkit-fill-available;
     max-width: 768px;
     gap: 35px;
   }
@@ -6464,10 +6488,16 @@ a {
     left: 0;
     bottom: 0;
     padding: 10px;
-    width: 100%;
+    width: -webkit-fill-available;
   }
   .home-yellow-blue .home-bottom .btn {
     width: 100%;
+  }
+  .home-yellow-blue .home-content__list {
+    width: auto;
+  }
+  .home-yellow-blue .social {
+    width: -webkit-fill-available;
   }
 }
 
@@ -6601,6 +6631,7 @@ a {
     -ms-grid-column-span: 3;
     grid-column: 3 span;
     margin-bottom: 30px;
+    border-radius: 20px;
   }
 }
 @media (max-width: 576px) {
@@ -6609,6 +6640,7 @@ a {
     grid-column: 4 span;
     width: 100%;
     max-width: 425px;
+    border-radius: 20px;
   }
 }
 .portfolio-yellow-blue .portfolio-item__img img {
@@ -6839,3 +6871,4 @@ a {
     font-size: 16px;
   }
 }
+
