--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1407,8 +1407,9 @@ a {
   justify-content: center;
   border-radius: 100%;
   width: 100%;
-  height: auto;
+  height: 100%;
   max-width: 250px;
+  max-height: 250px;
 }
 .home-classic .home-img picture {
   width: 100%;
@@ -1426,8 +1427,13 @@ a {
   display: block;
   border-radius: 100%;
   width: 100%;
+  height: 100%;
   max-width: 250px;
   max-height: 250px;
+}
+.home-classic .home-img picture {
+  width: 100%;
+  height: 100%;
 }
 @media (max-width: 1024px) {
   .home-classic .home-img img {
