изменение верстки под свайпер

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -787,7 +787,7 @@ a {
     grid-template-columns: repeat(8, 1fr);
     border: none;
     padding: 0;
-    padding-bottom: 70px;
+    padding-bottom: 0;
     width: 100%;
     max-width: 768px;
     -webkit-box-shadow: none;
@@ -799,7 +799,7 @@ a {
 }
 @media (max-width: 576px) {
   .home__top {
-    row-gap: 30px;
+    row-gap: 0;
   }
 }
 .home__left {
@@ -846,6 +846,7 @@ a {
   .home__right {
     -ms-grid-column-span: 8;
     grid-column: 8 span;
+    margin-bottom: 5px;
     padding-top: 0;
   }
 }
@@ -943,7 +944,7 @@ a {
 }
 @media (max-width: 576px) {
   .home-content {
-    gap: 30px;
+    gap: 25px;
   }
 }
 .home-content__top {
@@ -1247,10 +1248,10 @@ a {
 }
 @media (max-width: 1024px) {
   .home-bottom {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
-    padding: 10px;
+    padding: 0;
     width: -webkit-fill-available;
     width: -moz-available;
   }
@@ -1314,7 +1315,7 @@ a {
     align-items: center;
     border: none;
     padding: 0;
-    padding-bottom: 75px;
+    padding-bottom: 0;
     width: 100%;
     max-width: 100%;
     -webkit-box-shadow: none;
@@ -1846,7 +1847,7 @@ a {
 }
 @media (max-width: 1024px) {
   .home-classic .home-bottom {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     padding: 10px;
@@ -1910,7 +1911,7 @@ a {
     align-items: center;
     border: none;
     padding: 0;
-    padding-bottom: 75px;
+    /* padding-bottom: 75px; */
     width: 100%;
     max-width: 100%;
     -webkit-box-shadow: none;
@@ -1919,8 +1920,8 @@ a {
 }
 @media (max-width: 576px) {
   .home-strict .home__top {
-    padding-bottom: 65px;
-    row-gap: 30px;
+    /* padding-bottom: 65px; */
+    row-gap: 0;
   }
 }
 .home-strict .home__left {
@@ -2010,8 +2011,8 @@ a {
   -ms-grid-column-span: 7;
   grid-column: 7 span;
   padding: 20px;
-  padding-top: 40px;
-  padding-bottom: 30px;
+  padding-top: 35px;
+  padding-bottom: 20px;
   gap: 20px;
 }
 @media (max-width: 1024px) {
@@ -2023,13 +2024,13 @@ a {
     width: -webkit-fill-available;
     width: -moz-available;
     max-width: 768px;
-    gap: 35px;
+    gap: 25px;
   }
 }
 @media (max-width: 576px) {
   .home-strict .home__right {
     padding: 10px;
-    gap: 30px;
+    gap: 20px;
   }
 }
 .home-strict .home-content {
@@ -2159,7 +2160,7 @@ a {
 }
 .home-strict .item-link__span {
   font-weight: 300;
-  font-size: 20px;
+  font-size: 18px;
 }
 @media (max-width: 576px) {
   .home-strict .item-link__span {
@@ -2264,7 +2265,7 @@ a {
 .home-strict .home-bottom {
   -ms-grid-column-span: 12;
   grid-column: 12 span;
-  margin-top: 15px;
+  /* margin-top: 15px; */
   background-color: var(--light-color);
 }
 .home-strict .home-bottom__list {
@@ -2311,9 +2312,9 @@ a {
 }
 @media (max-width: 1024px) {
   .home-strict .home-bottom {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    position: relative;
+    /* left: 0; */
+    /* bottom: 0; */
     padding: 10px;
     width: -webkit-fill-available;
     width: -moz-available;
@@ -2367,7 +2368,7 @@ a {
     grid-template-columns: repeat(8, 1fr);
     border: none;
     padding: 0;
-    padding-bottom: 70px;
+    padding-bottom: 0px;
     width: 100%;
     max-width: 768px;
     -webkit-box-shadow: none;
@@ -2382,6 +2383,9 @@ a {
 .home-medicine .home__left {
   -ms-grid-column-span: 5;
   grid-column: 5 span;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media (max-width: 1024px) {
   .home-medicine .home__left {
@@ -2440,14 +2444,15 @@ a {
   justify-content: center;
   border-radius: 100%;
   width: 100%;
-  height: auto;
-  max-width: 390px;
-  max-height: 390px;
+  height: 100%;
+  max-width: 330px;
+  max-height: 330px;
   -webkit-box-shadow: var(--shadow-med);
   box-shadow: var(--shadow-med);
 }
 .home-medicine .home-img picture {
   width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -2455,6 +2460,7 @@ a {
   display: block;
   border-radius: 100%;
   width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -2469,6 +2475,7 @@ a {
     width: 100%;
     height: 100%;
     max-width: 400px;
+    max-height: 100%;
   }
 }
 @media (max-width: 576px) {
@@ -2488,6 +2495,8 @@ a {
     max-width: -webkit-fit-content;
     max-width: -moz-fit-content;
     max-width: fit-content;
+    height: 400px;
+    max-height: 100%;
   }
 }
 @media (max-width: 576px) {
@@ -2749,10 +2758,10 @@ a {
 }
 @media (max-width: 1024px) {
   .home-medicine .home-bottom {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
-    padding: 10px;
+    padding: 0;
     width: -webkit-fill-available;
     width: -moz-available;
   }
@@ -2802,14 +2811,14 @@ a {
     grid-template-columns: repeat(8, 1fr);
     border: none;
     padding: 10px;
-    padding-bottom: 70px;
+    padding-bottom: 10px;
     width: 100%;
     max-width: 100%;
   }
 }
 @media (max-width: 576px) {
   .home-flup .home__top {
-    row-gap: 30px;
+    row-gap: 10px;
   }
 }
 .home-flup .home__left {
@@ -3094,7 +3103,7 @@ a {
 }
 @media (max-width: 1024px) {
   .home-flup .home-bottom {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     padding: 10px;
@@ -3180,7 +3189,7 @@ a {
     align-items: center;
     border: none;
     padding: 0;
-    padding-bottom: 75px;
+    padding-bottom: 15px;
     width: 100%;
     max-width: 100%;
     -webkit-box-shadow: none;
@@ -3189,8 +3198,8 @@ a {
 }
 @media (max-width: 576px) {
   .home-yellow-blue .home__top {
-    padding-bottom: 65px;
-    row-gap: 30px;
+    padding-bottom: 15px;
+    row-gap: 5px;
   }
 }
 .home-yellow-blue .home__left {
@@ -3578,7 +3587,7 @@ a {
 }
 @media (max-width: 1024px) {
   .home-yellow-blue .home-bottom {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     padding: 10px;
@@ -3632,8 +3641,9 @@ a {
     padding: 0;
     padding-bottom: 70px;
   }
-  .portfolio__content.border-dark {
+  .portfolio__content {
     border: none;
+    box-shadow: none;
   }
 }
 .portfolio__list {
@@ -3756,6 +3766,7 @@ a {
 }
 .portfolio-item__img img {
   display: block;
+  border-radius: 5px;
   width: 100%;
   max-height: 250px;
 }
@@ -6067,6 +6078,7 @@ a {
     -ms-flex-align: center;
     align-items: center;
     padding: 0;
+    gap: 0;
   }
 }
 .home-yellow-blue .home__top {
@@ -6095,7 +6107,7 @@ a {
     align-items: center;
     border: none;
     padding: 0;
-    padding-bottom: 75px;
+    padding-bottom: 15px;
     width: 100%;
     max-width: 100%;
     -webkit-box-shadow: none;
@@ -6104,8 +6116,8 @@ a {
 }
 @media (max-width: 576px) {
   .home-yellow-blue .home__top {
-    padding-bottom: 65px;
-    row-gap: 30px;
+    padding-bottom: 15px;
+    row-gap: 5px;
   }
 }
 .home-yellow-blue .home__left {
@@ -6181,6 +6193,7 @@ a {
   }
 }
 .home-yellow-blue .home__right {
+  box-sizing: border-box;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6196,6 +6209,7 @@ a {
   justify-content: space-between;
   -ms-grid-column-span: 7;
   grid-column: 7 span;
+  width: 100%;
   padding: 20px;
   padding-top: 40px;
   padding-bottom: 30px;
@@ -6501,9 +6515,10 @@ a {
 }
 @media (max-width: 1024px) {
   .home-yellow-blue .home-bottom {
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
+    margin-top: 0;
     padding: 10px;
     width: -webkit-fill-available;
     width: -moz-available;
